tests/negative/traits/virtual-refers-to-self.orng
trait Lol {
    virtual fn lol() -> Self
}